<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity" >


        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="147dp"
            android:layout_alignTop="@+id/edtfirstname"
            android:layout_alignBottom="@+id/edtfirstname"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="127dp"
            android:layout_marginTop="-155dp"
            android:layout_marginEnd="124dp"
            android:layout_marginBottom="93dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/closetero_png" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtlastname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/desired_username"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtfirstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtlastname"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="-3dp"
            android:layout_marginTop="170dp"
            android:ems="10"
            android:hint="@string/enter_your_first_name"
            android:inputType="textPersonName"
            android:paddingTop="50dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtUsername"
            android:layout_alignLeft="@+id/edtUsername"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:singleLine="true">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtPass"
            android:layout_alignLeft="@+id/edtPass"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtConfirmPass"
            android:layout_alignLeft="@+id/edtConfirmPass"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/enter_valid_email_id_optional_"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtlastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtfirstname"
            android:layout_alignLeft="@+id/edtUsername"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtEmail"
            android:layout_alignLeft="@+id/edtEmail"
            android:layout_marginTop="35dp"
            android:text="@string/strRegistro" />

    </RelativeLayout>
</ScrollView>